--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ nav ul li a.active {
 }
 
 ul{
-    grid-column: 2/span 1;
+    grid-column: 2/ span 1;
     list-style-position: inside;
     z-index: 11;
 }
@@ -227,9 +227,129 @@ img{
         text-shadow: 0px 2px 5px #FFCB05;
     }
 
-    /* larger logo */
-    .umsi-logo{
-        width:25%;
+    /* physical health grid */
+    article {
+        display: grid;
+        grid-template-columns: 50% 50%;
+        column-gap: 1%;
+        margin-top: 2.5%;
+        padding-left: 2%;
+        padding-right: 2%;
+        background-color:#00274c;
+        font-size: 3vh;
+    }
+
+    #uhs-img{
+        align-self: start;
+        grid-column: 2/ span 1;
+    }
+
+    #uhs-text{
+        grid-column: 1/ span 1;
+        justify-self: center; 
+        align-self: center; 
+        color: white;
+    }
+
+    #recreational-img{
+        align-self: start;
+        grid-column: 1/ span 1;
+        grid-row: 1/ span 1;
+    }
+
+    #rec-text{
+        grid-column: 2/ span 1;
+        grid-row: 1/ span 1;
+        padding-left: 2%;
+        justify-self: center; 
+        align-self: center; 
+        color: white;
+    }
+    /*Academic advising & tutoring grid & basic needs*/
+    .advising, .tutoring, .library, .basic-needs{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: auto auto;
+        background-color: white;
+        column-gap: 1%;
+        margin-top: 2%;
+        padding-right: 1%;
+        font-size: 3vh;
+    }
+
+    .advising h2, .tutoring h2{
+        grid-row: 1/ span 1;
+        grid-column: 1/ span 2;
+    }
+
+    .library h2, .basic-needs h2{
+        grid-row: 1/ span 1;
+        grid-column: 1/ span 2;
+    }
+
+    .advising p, .tutoring p{
+        grid-row: 2/ span 1;
+        grid-column: 2/ span 1;
+        justify-self: center; 
+        align-self: center; 
+        padding-left: 2%;
+        padding-right: 2%;
+    }
+
+    .library p, .basic-needs p{
+        grid-row: 2/ span 1;
+        grid-column: 1/ span 1;
+        justify-self: center; 
+        align-self: center; 
+    }
+
+    /*extracurriculars grid */
+
+    #extracurriculars-text{
+        grid-template-rows:1fr 1fr 1fr;
+        row-gap: 2%;
+        color: white;
+        padding-top: 2%;
+        padding-bottom: 2%;
+    }
+
+    #extracurriculars-img{
+        align-self: center;
+        grid-column: 1/ span 1;
+        grid-row: 1/ span 3;
+    }
+    
+    #student-orgs, #arts, #housing{
+        grid-column: 2/ span 1;
+        justify-self: center; 
+        align-self: center; 
+    }
+
+    #student-orgs{
+        grid-row: 1/ span 1;
+    }
+    #arts{
+        grid-row: 2/ span 1;
+    }
+    #housing{
+        grid-row: 3/ span 1;
+    }
+
+    /* CAPS grid */
+    #CAPS-container{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: auto auto auto;
+        background-color: white;
+        column-gap: 1%;
+        margin-top: 2%;
+        padding-left: 0%;
+        padding-right: 0%;
+    }
+
+    #CAPS-img{
+        grid-column: 1/ span 1;
+        grid-row: 1/ span 3;
     }
 
     /* transition h2s */
