--- a/css/style.css
+++ b/css/style.css
@@ -227,7 +227,7 @@ img{
         text-shadow: 0px 2px 5px #FFCB05;
     }
 
-    /* physical health grid */
+    /* home page: physical health grid */
     article {
         display: grid;
         grid-template-columns: 50% 50%;
@@ -265,24 +265,19 @@ img{
         align-self: center; 
         color: white;
     }
-    /*Academic advising & tutoring grid & basic needs*/
+
+    /*academic support: academic advising & tutoring grid & basic needs*/
     .advising, .tutoring, .library, .basic-needs{
         display: grid;
         grid-template-columns: 50% 50%;
         grid-template-rows: auto auto;
         background-color: white;
         column-gap: 1%;
-        margin-top: 2%;
-        padding-right: 1%;
+        margin-top: 2.5%;
         font-size: 3vh;
     }
 
-    .advising h2, .tutoring h2{
-        grid-row: 1/ span 1;
-        grid-column: 1/ span 2;
-    }
-
-    .library h2, .basic-needs h2{
+    .advising h2, .tutoring h2, .library h2, .basic-needs h2{
         grid-row: 1/ span 1;
         grid-column: 1/ span 2;
     }
@@ -390,7 +385,7 @@ img{
         font-size: 3.2vh; 
         font-weight: bold; 
         opacity: 0; /* text hidden */
-        transition: opacity 0.3s ease; /* fade-in effect */
+        transition: opacity 0.3s ease; /* fade-in */
     }
 
     .image-container .overlay {
@@ -401,7 +396,7 @@ img{
         height: 100%;
         background-color: rgba(255, 255, 255, 0.8); /* white overlay */
         opacity: 0; /* no overlay to start */
-        transition: opacity 0.3s ease; /* fade-in effect */
+        transition: opacity 0.3s ease; /* fade-in */
     }
     
     /* text visible and white overlay */
@@ -413,7 +408,7 @@ img{
     }
 }
 
-/* prefers reduced motion */
+/* prefers reduced motion, headings*/
 
 @media (prefers-reduced-motion: reduce){
     
@@ -422,5 +417,21 @@ img{
         transform: translateX(0); 
         opacity: 1; 
     }
+}
+
+/* 404 page */ 
+    /* no media query so works on mobile too */
+
+#error h1{
+    background-color: #00274c;
+    color: white;
+    padding-top: 3%;
+    padding-bottom: 3%;
+    font-size: 8vh;
+}
+
+#error p, #error a{
+    text-align: center;
+    padding-bottom: 1%;
 }
   
